name:                bounded-set
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD2
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Data.BoundedSet
  build-depends:
    base >= 4.7 && < 4.9,
    binary,
    bytestring,
    containers
  hs-source-dirs:      src
  default-language:    Haskell2010
